--- a/examples/appnet-api-server/build.gradle
+++ b/examples/appnet-api-server/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
   implementation rootProject
-  implementation group: 'com.hedera.hashgraph', name: 'sdk-jdk7', version: '2.0.5'
+  implementation group: 'com.hedera.hashgraph', name: 'sdk', version: '2.29.0'
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.6'
   implementation group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.1.4'
